[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/MusicManager/Scripts/Track.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="Track" type="Control"]
margin_top = -61.0
margin_right = 1024.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="Hub" type="Panel" parent="."]
margin_right = 150.0
margin_bottom = 60.0

[node name="SelHighlight" type="Panel" parent="."]
visible = false
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 60.0

[node name="TimeLine" type="Panel" parent="."]
material = SubResource( 2 )
margin_left = 150.0
margin_right = 1024.0
margin_bottom = 60.0
focus_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="HSlider" parent="."]
margin_left = 32.0
margin_top = 3.0
margin_right = 146.0
margin_bottom = 27.0
max_value = 10.0
value = 5.0

[node name="BusOption" type="OptionButton" parent="."]
margin_left = 5.0
margin_top = 32.0
margin_right = 146.0
margin_bottom = 52.0
text = "Master"
items = [ "Master", null, false, 0, null, "Master", null, false, 0, null, "New Bus", null, false, 1, null, "Master", null, false, 0, null, "New Bus", null, false, 1, null, "Master", null, false, 0, null, "Reverb", null, false, 1, null, "Master", null, false, 0, null, "Reverb", null, false, 1, null ]
selected = 0

[node name="Label" type="Label" parent="."]
self_modulate = Color( 0.713726, 0.713726, 0.713726, 1 )
margin_left = 159.135
margin_top = -0.326584
margin_right = 362.135
margin_bottom = 47.6734
text = "Left click to select track

Right click to select a sound file"

[node name="Label2" type="Label" parent="."]
margin_left = 4.4213
margin_top = 2.76218
margin_right = 28.4213
margin_bottom = 16.7622
text = "Vol"

[connection signal="mouse_entered" from="TimeLine" to="." method="_on_TimeLine_mouse_entered"]
[connection signal="mouse_exited" from="TimeLine" to="." method="_on_TimeLine_mouse_exited"]
[connection signal="value_changed" from="Volume" to="." method="_on_Volume_value_changed"]
[connection signal="item_selected" from="BusOption" to="." method="_on_BusOption_item_selected"]
[connection signal="mouse_entered" from="BusOption" to="." method="_on_BusOption_mouse_entered"]
